# ml-stack-supreme

./: .gitignore  README.md  pyproject.toml  setup_uv_env.sh  setup_vscode.sh
vscode/: extensions.list  settings.json
vscode/snippets/: uv.json
